# tothello

./: LICENSE  README.rst  setup.cfg
src/tothello/: tothello.py
