[metadata]
name = tothello
version = dev
url = https://github.com/tsvenson/tothello
author = Thomas Svensson
author_email = thomas@tsvenson.com
license = MIT
description = Othello game written in Python using Textual as TUI in Bash for Linux.
long_description = file: README.rst
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
package_dir=
    =src
packages = tothello

[options.entry_points]
console_scripts =
    tothello = tothello.tothello:main
